[gd_scene load_steps=31 format=3 uid="uid://wcml3pnewx7"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_slnxt"]
[ext_resource type="Texture2D" uid="uid://gk1r24182lh6" path="res://dogshit.png" id="2_7peqt"]
[ext_resource type="FontFile" uid="uid://bbvng6aev8qdq" path="res://Texture/DePixelKlein.ttf" id="3_6bpbu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6jlm3"]
radius = 5.0
height = 14.0

[sub_resource type="Animation" id="Animation_rgwnb"]
resource_name = "IdleDown"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_nrj5l"]
resource_name = "IdleLeft"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_i8qi7"]
resource_name = "IdleRight"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_vtgnd"]
resource_name = "IdleUp"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_s8du8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_vlloj"]
resource_name = "RunDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_fknn6"]
resource_name = "RunLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 12]
}

[sub_resource type="Animation" id="Animation_4prj0"]
resource_name = "RunRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 4]
}

[sub_resource type="Animation" id="Animation_t65ce"]
resource_name = "RunUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qiv7n"]
_data = {
"IdleDown": SubResource("Animation_rgwnb"),
"IdleLeft": SubResource("Animation_nrj5l"),
"IdleRight": SubResource("Animation_i8qi7"),
"IdleUp": SubResource("Animation_vtgnd"),
"RESET": SubResource("Animation_s8du8"),
"RunDown": SubResource("Animation_vlloj"),
"RunLeft": SubResource("Animation_fknn6"),
"RunRight": SubResource("Animation_4prj0"),
"RunUp": SubResource("Animation_t65ce")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lqqaa"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jsx0q"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n0fmv"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jt54y"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_lddhp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_lqqaa")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_jsx0q")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_n0fmv")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_jt54y")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nxr1v"]
animation = &"RunLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0kt5c"]
animation = &"RunDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kdeqf"]
animation = &"RunRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ses35"]
animation = &"RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_34qaa"]
blend_point_0/node = SubResource("AnimationNodeAnimation_nxr1v")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_0kt5c")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_kdeqf")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ses35")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oco4w"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_685s7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o5kxq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1kg0o"]
states/End/position = Vector2(1298, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_lddhp")
states/Idle/position = Vector2(647, 109)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_34qaa")
states/Run/position = Vector2(780, 109)
states/Start/position = Vector2(48, 86)
transitions = ["Idle", "Run", SubResource("AnimationNodeStateMachineTransition_oco4w"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_685s7"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_o5kxq")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qocxi"]
bg_color = Color(0.811765, 0.603922, 0, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ibb7"]
bg_color = Color(0.247059, 0.427451, 0.839216, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(-1, -11)
collision_layer = 2
script = ExtResource("1_slnxt")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.40625, 0.40625)
texture = ExtResource("2_7peqt")
hframes = 4
vframes = 9
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 11)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_6jlm3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qiv7n")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_1kg0o")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Run/blend_position = Vector2(0.00153852, -0.0144104)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Timer" type="Label" parent="."]
z_index = 20
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -29.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.811765, 0.603922, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_6bpbu")
text = "99"
horizontal_alignment = 1

[node name="Timer2" type="Label" parent="."]
z_index = 20
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -29.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0.396078, 0.905882, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("3_6bpbu")
text = "99"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 20
offset_left = 90.0
offset_top = 80.0
offset_right = 156.0
offset_bottom = 86.0
theme_override_styles/background = SubResource("StyleBoxFlat_qocxi")
theme_override_styles/fill = SubResource("StyleBoxFlat_5ibb7")
value = 75.0
show_percentage = false

[node name="ErrorStatement" type="Label" parent="."]
z_index = 20
offset_left = -73.0
offset_top = -86.0
offset_right = 75.0
offset_bottom = -71.0
theme_override_fonts/font = ExtResource("3_6bpbu")
theme_override_font_sizes/font_size = 7
text = "penisujeme"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
z_index = 20
offset_left = -157.0
offset_top = -90.0
offset_right = -111.0
offset_bottom = -69.0
theme_override_fonts/font = ExtResource("3_6bpbu")
theme_override_font_sizes/font_size = 7
text = "Score: "
vertical_alignment = 1

[node name="RemainingTime" type="Label" parent="."]
z_index = 20
offset_left = 57.0
offset_top = -90.0
offset_right = 157.0
offset_bottom = -69.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_6bpbu")
theme_override_font_sizes/font_size = 7
text = "60 seconds remaining..."
horizontal_alignment = 2
vertical_alignment = 1
